# multimodal_eval

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  cleanup.sh  gitignore  pyproject.toml  requirements.txt
app_ui/results_viewer/: results_viewer.py
app_ui/streamlit_ui/: judge_logic.py  metrics_eval.py  renderers.py  streamlit_app.py  ui_styles.py
docs/: architecture.md  composite_score.md  configuration.md  dataset.md  examples.md  faq.md  interpreting_results.md  metric_extension.md  metrics.md  model_extension.md  model_installation.md  quickstart.md  roadmap.md  task_addition.md  tasks.md  tests.md  troubleshooting.md  usage.md
examples/: captioning_demo.ipynb  run_captioning_labeled.py  run_captioning_unlabeled.py  show_results.py
multimodal_eval/: orchestrator.py
multimodal_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
multimodal_eval/cli/: main.py  run_all.py  run_compare.py
multimodal_eval/configs/: tasks_config.py
multimodal_eval/data_sets/: __init__.py  loader.py
multimodal_eval/evaluation/: cider.py  clip_score.py  composite_score.py  contextual_relevance.py  evaluator.py  hallucination_metric.py  metrics_registry.py  schema.py  semantic_similarity.py
multimodal_eval/llm_eval/: judge_interface.py
multimodal_eval/model_wrappers/: base_wrapper.py  llava_wrapper.py  model_registry.py  openai_wrapper.py  qwen_wrapper.py
multimodal_eval/tools/: add_dataset.py
multimodal_eval/utils/: constants.py  downloader.py  io.py  saver.py
results/: all_runs.csv  all_runs.jsonl
tests/: conftest.py
(+63 files in other folders)
